--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 header{
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row-reverse;
+    flex-direction: row;
     background-color: lightblue;
     padding: 50px 10%;
 }
@@ -11,5 +11,15 @@ header{
     font-size: 20px;
 }
 #main-content{
-    margin-top: 15px;
+    margin: 30px 0;
+}
+/* #main-ul{
+    padding: 0;
+} */
+li{
+    margin: 50px 0;
+    list-style-type: none;
+}
+li *{
+    margin: 5px 0;
 }
