--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
-*{margin: 0;}
+body{
+    margin: 0;
+    background-color: #ede7d7;
+}
 header{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    background-color: lightblue;
+    background-color: #b8c9ee;
     padding: 50px 10%;
+
 }
 #admin-link{
     text-decoration: none;
@@ -13,11 +17,18 @@ header{
 #main-content{
     margin: 30px 0;
 }
-/* #main-ul{
+#main-ul{
     padding: 0;
-} */
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
 li{
-    margin: 50px 0;
+    margin: 50px 1%;
+    width: 25%;
+    background-color: #f4f4f4;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px #4f0f0f;
     list-style-type: none;
 }
 li *{
