--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,17 @@
+@import url(variables.css);
+*{
+    box-sizing: border-box;
+}
+
 body{
     margin: 0;
-    background-color: #ede7d7;
+    background-color: var(--background);
 }
 header{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    background-color: #b8c9ee;
+    background-color: var(--blue);
     padding: 50px 10%;
 
 }
@@ -26,10 +31,11 @@ header{
 li{
     margin: 50px 1%;
     width: 25%;
-    background-color: #f4f4f4;
+    background-color: var(--white);
     border-radius: 15px;
-    box-shadow: 5px 5px 5px #4f0f0f;
+    box-shadow: 5px 5px 5px var(--accent-shade);
     list-style-type: none;
+    overflow: auto;
 }
 li *{
     margin: 5px 0;
