--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url(variables.css);
 *{
     box-sizing: border-box;
+    font-family: var(--main-font);
 }
 
 body{
@@ -13,7 +14,6 @@ header{
     flex-direction: row;
     background-color: var(--blue);
     padding: 50px 10%;
-
 }
 #admin-link{
     text-decoration: none;
@@ -42,6 +42,9 @@ li::-webkit-scrollbar {
 }
 li *{
     margin: 5px 0;
+}
+h2 {
+    font-family: var(--extra-font);
 }
 h3, #author {
     display: inline ;
