--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,26 @@ body{
 }
 
 header{
-    /* displ'ay: flex;
-    flex-wrap: wrap;
-    flex-direction: row; */
+    display: grid;
+    grid-template-columns: repeat(3, auto);
     background-color: var(--blue);
     padding: 50px 10%;
+    width: 100%;
+}
+h1{
+    grid-column: 2/ span 1;
+    justify-self: center;
 }
 #admin-link{
     font-size: 20px;
+    grid-column: 3/ span 1;
+    justify-self: right;
+    align-self: center;
+    background-color: var(--white);
+    border-radius: 7px;
+    padding: 1px 9px;
+    color: black;
+    text-decoration: none;
 }
 #main-content{
     margin: 30px 0;
@@ -48,7 +60,7 @@ h2, h3 {
     font-family: var(--extra-font);
 }
 h3, #author {
-    display: inline ;
+    display: inline;
 }
 button{
     background-color: var(--blue);
@@ -59,7 +71,7 @@ li a{
     text-decoration: none;
     color: black;
 }
-button:hover{
+button:hover, header a:hover{
     transition: .3s ease;
     box-shadow: 2px 2px 2px var(--accent-shade);
 }
