--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
     background-color: var(--background);
 }
 
-header{
+#index-header{
     display: grid;
     grid-template-columns: repeat(3, auto);
     background-color: var(--blue);
@@ -27,7 +27,7 @@ h1{
     background-color: var(--white);
     border-radius: 7px;
     padding: 1px 9px;
-    color: black;
+    color: var(--accent-shade);
     text-decoration: none;
 }
 #main-content{
@@ -69,7 +69,7 @@ button{
 }
 li a{
     text-decoration: none;
-    color: black;
+    color: var(--accent-shade);
 }
 button:hover, header a:hover{
     transition: .3s ease;
