--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -13,6 +13,9 @@ body{
 h1{
     background-color: var(--blue);
     padding: 50px 10%;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 300%;
 }
 table, thead, tbody, th, td{
     border: 1px solid black;
@@ -22,23 +25,40 @@ table, thead, tbody, th, td{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-family: var(--extra-font);
 }
 #blog-table {
     background-color: var(--white);
+    box-sizing: border-box;
+    width: 100%;
+    table-layout: fixed;
 }
-
+#blog-form {
+    background-color: var(--white);
+    border-radius: 15px;
+    margin: 15%;
+    padding: 1%;
+    align-items: center;
+}
+.input, textarea{
+    margin: 1%;
+    border-radius: 5px;
+    min-width: 100%;
+}
 #main-nav {
     display: flex;
     justify-content: space-between;
+    padding: 1% 0;
 }
 td {
     padding: 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
-
 .buttons {
     text-align: center;
+    min-width: 15%;
 }
-
 #admin-link{
     font-size: 20px;
 }
@@ -56,6 +76,11 @@ button{
     background-color: var(--blue);
     border-radius: 7px;
     border: none;
+}
+#blog-button {
+    min-width: 20%;
+    align-self: center;
+    margin: 2%;
 }
 button:hover{
     transition: .3s ease;
